fix: Simplified css/js/html for better sizing on small mobiles (e.g. iPhone XS).

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -21,7 +21,10 @@ body {
     background: transparent;
     border: 1px solid transparent;
     color: #3b3b3a;
+    width: 44px;
+    height: 44px;
     padding: 11px;
+    font-size: 1.2em;
     /* Some padding */
     cursor: pointer;
     /* Pointer/hand icon */
@@ -29,28 +32,8 @@ body {
     /* Float the buttons side by side */
 }
 
-@media (max-device-width: 1024px) {
-    .btn-group button {
-        font-size: 2.4em;
-        height: 88px;
-        width: 88px;
-    }
-
-    .minGroup {
-        width: 50px;
-    }
-}
-
-@media (min-device-width: 1024px) {
-    .btn-group button {
-        font-size: 1.2em;
-        height: 44px;
-        width: 44px;
-    }
-
-    .minGroup {
-        width: 25px;
-    }
+.minGroup {
+    width: 25px;
 }
 
 button::-moz-focus-inner {
